tree-sitter/test/corpus/basics.txt
==================
text and variables
==================
Hello {[user.name]}!
---
(template
  (text)
  (variable
    (tag_open)
    (path
      (identifier)
      (identifier))
    (tag_close))
  (text))

==================
variable with nullable modifier
==================
{[ name? ]}
---
(template
  (variable
    (tag_open)
    (path
      (identifier))
    (modifier)
    (tag_close)))

==================
variable with required modifier
==================
{[ name! ]}
---
(template
  (variable
    (tag_open)
    (path
      (identifier))
    (modifier)
    (tag_close)))

==================
comments and delimiter escape
==================
{[% block comment ]}
{[{]} literal
---
(template
  (comment)
  (text)
  (delimiter_escape)
  (text))

==================
unsecure output
==================
{[!unsecure html ]}
---
(template
  (unsecure_output
    (tag_open)
    (path
      (identifier))
    (tag_close)))

==================
unsecure output with dotted path
==================
{[!unsecure user.html ]}
---
(template
  (unsecure_output
    (tag_open)
    (path
      (identifier)
      (identifier))
    (tag_close)))

==================
include with arguments
==================
{[!include /partials/card user=user profile=profile.item]}
---
(template
  (include
    (tag_open)
    (include_name)
    (include_args
      (include_arg
        (identifier)
        (path
          (identifier)))
      (include_arg
        (identifier)
        (path
          (identifier)
          (identifier))))
    (tag_close)))

==================
include without arguments
==================
{[!include /simple ]}
---
(template
  (include
    (tag_open)
    (include_name)
    (tag_close)))


==================
comment with special characters and bracket-ending content
==================
{[% <div class="x">, {y: (1,2)}. ]}
{[%a]]}
{[%-]}
---
(template
  (comment)
  (text)
  (comment)
  (text)
  (comment))
